# so_host

./: .gitignore  CMakeLists.txt  README.md  comm.cpp  comm.h  erl_comm.cpp  main.cpp  so_host.cpp  so_host.h  test.sh
libecho/: CMakeLists.txt  echo.cpp
